# auth0-assistant0

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package.json
py-langchain/: README.md  docker-compose.yml
py-langchain/backend/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
py-langchain/backend/app/: main.py
py-langchain/backend/app/agents/: assistant0.py
py-langchain/backend/app/agents/tools/: context_docs.py  google_calendar.py  shop_online.py  user_info.py
py-langchain/backend/app/api/: api_router.py
py-langchain/backend/app/api/routes/: chat.py  documents.py
py-langchain/backend/app/core/: auth.py  auth0_ai.py  config.py  db.py  fga.py  fga_init.py  rag.py
py-langchain/backend/app/models/: documents.py  embeddings.py  models.py
py-langchain/frontend/: .gitignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json
py-langchain/frontend/src/: global.css  (+1 more)
py-llamaindex/: README.md
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ChatMessageBubble.tsx  ChatWindow.tsx
src/lib/: agent.ts  auth0-ai.ts  auth0.ts
src/utils/: message-converters.ts  stream-logging.ts
temp-packages/auth0-ai/: README.md  pyproject.toml
temp-packages/auth0-ai-langchain/: README.md  pyproject.toml
temp-packages/auth0-ai-langchain/auth0_ai_langchain/: FGARetriever.py  __init__.py  auth0_ai.py
temp-packages/auth0-ai-langchain/auth0_ai_langchain/async_authorization/: __init__.py  async_authorizer.py  graph_resumer.py
temp-packages/auth0-ai-langchain/auth0_ai_langchain/fga/: __init__.py
temp-packages/auth0-ai-langchain/auth0_ai_langchain/token_vault/: __init__.py  token_vault_authorizer.py
temp-packages/auth0-ai-langchain/auth0_ai_langchain/utils/: interrupt.py  tool_wrapper.py
temp-packages/auth0-ai-langchain/tests/: test_FGARetriever.py  test_QueryBuilder.py
temp-packages/auth0-ai/auth0_ai/: credentials.py  utils.py
temp-packages/auth0-ai/auth0_ai/authorizers/: context.py  fga_authorizer.py  token_vault_authorizer.py  types.py
temp-packages/auth0-ai/auth0_ai/authorizers/async_authorization/: __init__.py  async_authorization_request.py  async_authorizer_base.py  async_authorizer_params.py
temp-packages/auth0-ai/auth0_ai/interrupts/: async_authorization_interrupts.py  auth0_interrupt.py  token_vault_interrupt.py
temp-packages/auth0-ai/auth0_ai/stores/: __init__.py  store.py  sub_store.py
temp-packages/auth0-ai/auth0_ai/stores/impl/: fs_store.py  in_memory_store.py
ts-langchain/: .env.example  .eslintrc.json  README.md  auth0-ai-langchain-0.0.0.tgz  langgraph.json  package-lock.json  package.json
ts-llamaindex/: README.md  auth0-ai-llamaindex-0.0.0.tgz  next.config.js  package-lock.json  package.json
ts-vercel-ai/: .env.example  README.md  auth0-ai-0.0.0.tgz  auth0-ai-vercel-0.0.0.tgz  package-lock.json  package.json
(+96 files in other folders)
