[tool.poetry]
name = "auth0-ai-langchain"
version = "1.0.0b3"
description = "This package is an SDK for building secure AI-powered applications using Auth0, Okta FGA and LangChain."
license = "apache-2.0"
homepage = "https://auth0.com"
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openfga-sdk = "^0.9.5"
langchain = "^0.3.26"
langgraph-sdk = "^0.1.73"
langchain-core = "^0.3.69"
langgraph = "^0.5.3"
# auth0-ai = "^1.0.0b3"
auth0-ai = { path = "../auth0-ai", develop = true }

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest-asyncio = "^0.25.0"
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
