[tool.poetry]
name = "auth0-ai"
version = "1.0.0b3"
description = "This package provides base abstractions for authentication and authorization in AI applications."
license = "apache-2.0"
homepage = "https://auth0.com"
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openfga-sdk = "^0.9.5"
auth0-python = "^4.13.0"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
